# dmrlink3

./: .gitignore  ACLS.md  CHANGELOG.md  INSTALL.md  README.md  bridge.py  bridge_rules_SAMPLE.py  config.py  const.py  dmrlink-SAMPLE.cfg  dmrlink.py  local_peer_ids_SAMPLE.json  log.py  pyproject.toml  requirements.txt  trunk.py
dashboard/: config_sample.py  server.py
dashboard/static/: dashboard.html
systemd/: dmrlink3-bridge.service  dmrlink3-dash.service
tests/: conftest.py  fake_ipsc_peer.py  helpers.py  test_bridge.py  test_protocol.py  test_trunk_status.py
